// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderType: TIME > Modifying operators of the same type do not modify values 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "greater_than",
          "property": "time0",
          "value": "04:36",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TIME > Modifying the operatorStyle from none to range 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "between",
          "property": "time0",
          "value": [
            "04:36",
            "05:36",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TIME > Modifying the operatorStyle from range to none 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "time1",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TIME > operator: "style=none" 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "time0",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TIME > operator: "style=noop" && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "equal",
          "property": "time0",
          "value": "04:36",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TIME > operator: "style=range" && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "between",
          "property": "time0",
          "value": [
            "04:36",
            "05:36",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;
